--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,7 +4,7 @@
 global:
   edition: ee
   hosts:
-    domain: example.com
+    domain: gitlab-lab.dev
     https: true
   enterpriseImages:
     # Default repositories used to pull Gitlab Enterprise Edition images.
