--- a/gitlab/charts/webservice/values.yaml
+++ b/gitlab/charts/webservice/values.yaml
@@ -171,6 +171,12 @@ psql: {}
   # port: 5432
 
 global:
+  serviceAccount:
+    enabled: false
+    create: false
+    annotations: {}
+    ## Name to be used for serviceAccount, otherwise defaults to chart fullname
+    # name:
   ingress:
     enabled:
     annotations: {}
