--- a/gitlab/charts/webservice/values.yaml
+++ b/gitlab/charts/webservice/values.yaml
@@ -1,3 +1,5 @@
+name: gitlab
+
 # Default values for webservice.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
