--- a/gitlab/charts/webservice/values.yaml
+++ b/gitlab/charts/webservice/values.yaml
@@ -179,6 +179,7 @@ global:
     labels: {}
   service:
     labels: {}
+    annotations: {}
   serviceAccount:
     enabled: false
     create: false
