--- a/gitlab/values.yaml
+++ b/gitlab/values.yaml
@@ -2,10 +2,9 @@
 # This is a YAML-formatted file.
 
 global:
-  name: gitlab
   edition: ee
   hosts:
-    domain: gitlab-lab.dev
+    domain: example.com
     https: true
   enterpriseImages:
     # Default repositories used to pull Gitlab Enterprise Edition images.
