--- a/gitlab/charts/webservice/templates/serviceaccount.yaml
+++ b/gitlab/charts/webservice/templates/serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- $enabled := .Values.serviceAccount.enabled -}}
+{{- $enabled := or .Values.serviceAccount.enabled .Values.global.serviceAccount.enabled -}}
 {{- $create := or .Values.serviceAccount.create .Values.global.serviceAccount.create -}}
 {{- if and $enabled $create }}
 apiVersion: v1
