--- a/gitlab/charts/webservice/values.yaml
+++ b/gitlab/charts/webservice/values.yaml
@@ -186,6 +186,7 @@ global:
     ## Name to be used for serviceAccount, otherwise defaults to chart fullname
     # name:
   ingress:
+    apiVersion:
     provider: nginx
     enabled:
     annotations: {}
