--- a/gitlab/charts/gitaly/Chart.yaml
+++ b/gitlab/charts/gitaly/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 name: gitaly
 version: 5.8.2
-appVersion: master
+appVersion: 14.8.2
 description: Git RPC service for handling all the git calls made by GitLab
 keywords:
 - gitlab
