--- a/gitlab/charts/gitlab-pages/Chart.yaml
+++ b/gitlab/charts/gitlab-pages/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 name: gitlab-pages
 version: 5.8.2
-appVersion: master
+appVersion: 1.54.0
 description: Daemon for serving static websites from GitLab projects
 keywords:
 - gitlab
