--- a/gitlab/charts/gitlab-shell/Chart.yaml
+++ b/gitlab/charts/gitlab-shell/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 name: gitlab-shell
 version: 5.8.2
-appVersion: main
+appVersion: 13.23.2
 description: sshd for Gitlab
 keywords:
 - gitlab
