--- a/gitlab/charts/kas/Chart.yaml
+++ b/gitlab/charts/kas/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 name: kas
 version: 5.8.2
-appVersion: master
+appVersion: 14.8.1
 description: GitLab Agent Server
 keywords:
 - agent
