--- a/gitlab/charts/migrations/Chart.yaml
+++ b/gitlab/charts/migrations/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 name: migrations
 version: 5.8.2
-appVersion: master
+appVersion: 14.8.2
 description: Database migrations and other versioning tasks for upgrading Gitlab
 keywords:
 - gitlab
