--- a/gitlab/charts/praefect/Chart.yaml
+++ b/gitlab/charts/praefect/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 name: praefect
 version: 5.8.2
-appVersion: master
+appVersion: 14.8.2
 description: Praefect is a router and transaction manager for Gitaly, and a required
   component for running a Gitaly Cluster.
 keywords:
