--- a/gitlab/charts/sidekiq/Chart.yaml
+++ b/gitlab/charts/sidekiq/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 name: sidekiq
 version: 5.8.2
-appVersion: master
+appVersion: 14.8.2
 description: Gitlab Sidekiq for asynchronous task processing in rails
 keywords:
 - gitlab
