--- a/gitlab/charts/toolbox/Chart.yaml
+++ b/gitlab/charts/toolbox/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 name: toolbox
 version: 5.8.2
-appVersion: master
+appVersion: 14.8.2
 description: For manually running rake tasks through kubectl
 keywords:
 - gitlab
