--- a/gitlab/charts/webservice/Chart.yaml
+++ b/gitlab/charts/webservice/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 name: webservice
 version: 5.8.2
-appVersion: master
+appVersion: 14.8.2
 description: HTTP server for Gitlab
 keywords:
 - gitlab
