--- a/gitlab/charts/webservice/values.yaml
+++ b/gitlab/charts/webservice/values.yaml
@@ -167,31 +167,11 @@ workhorse:
     maxProcs: 2 # aim for max(2, requested_cpus / 2)
     maxFileSizeBytes: 250000
 
-psql:
-  host: postgresql.hostedsomewhere.else
-  port: 5432
-  username: gitlab
-  database: gitlabhq_production
+psql: {}
   # port: 5432
 
 global:
-  application:
-    create: false
-  common:
-    labels: {}
-  service:
-    labels: {}
-    annotations: {}
-  ## Enable deployment to use a serviceAccount
-  serviceAccount:
-    enabled: false
-    create: false
-    annotations: {}
-    ## Name to be used for serviceAccount, otherwise defaults to chart fullname
-    # name:
   ingress:
-    apiVersion: "networking.k8s.io/v1"
-    provider: nginx
     enabled:
     annotations: {}
     tls: {}
@@ -239,8 +219,6 @@ global:
   webservice: {}
     # workerTimeout: 60
   appConfig:
-    smartcard:
-      enabled: false
     incomingEmail:
       enabled: false
       address:
@@ -351,7 +329,6 @@ extra: {}
   # matomo_disable_cookies: false
   # one_trust_id: '_your_one_trust_id'
   # google_tag_manager_nonce_id: '_your_google_tag_manager_id'
-  # bizible: false
 rack_attack:
   git_basic_auth:
     enabled: false
@@ -414,13 +391,13 @@ priorityClassName: ""
 #  end of each resource `.metadata.name`, and added as a label to each
 #  resource for tracking.
 #  https://docs.gitlab.com/charts/charts/gitlab/webservice/#deployments
-deployments:
+deployments: {}
   # There must always be at least one, with `xyz.ingress.path: /`
   # unless `ingress.requireBasePath: false`
   #
-  default:
-    ingress:
-      path: /
+  # default:
+  #   ingress:
+  #     path: /
 
 affinity:
   podAntiAffinity:
