--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -989,7 +989,7 @@ shared-secrets:
 gitlab-runner:
   install: false
   rbac:
-    create: true
+    create: false
   runners:
     locked: false
     config: |
