--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -64,9 +64,9 @@ global:
   ## https://docs.gitlab.com/charts/charts/globals#configure-ingress-settings
   ingress:
     apiVersion: ""
-    configureCertmanager: true
+    configureCertmanager: false
     provider: nginx
-    # class:
+    class: nginx
     annotations: {}
     enabled: true
     tls: {}
