--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -50,7 +50,7 @@ global:
   hosts:
     domain: gitlab-lab.dev
     hostSuffix:
-    https: false
+    https: true
     externalIP:
     ssh: ~
     gitlab: {}
