--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -69,8 +69,8 @@ global:
     class: nginx
     annotations: {}
     enabled: true
-    tls: {}
-    #   enabled: true
+    tls:
+      enabled: true
     #   secretName:
     path: /
     pathType: Prefix
