--- a/helm/requirements.yaml
+++ b/helm/requirements.yaml
@@ -16,10 +16,10 @@ dependencies:
   version: 15.0.4
   repository: https://prometheus-community.github.io/helm-charts
   condition: prometheus.install
-- name: postgresql
-  version: 8.9.4
-  repository: https://charts.bitnami.com/bitnami
-  condition: postgresql.install
+#- name: postgresql
+#  version: 8.9.4
+#  repository: https://charts.bitnami.com/bitnami
+#  condition: postgresql.install
 - name: gitlab-runner
   version: 0.38.0
   repository: https://charts.gitlab.io/
@@ -34,4 +34,7 @@ dependencies:
   condition: redis.install
 - name: nginx-ingress
   condition: nginx-ingress.enabled
+  version: '*.*.*'
+- name: postgresql
+  condition: postgresql.install
   version: '*.*.*'
