--- a/helm/requirements.yaml
+++ b/helm/requirements.yaml
@@ -35,6 +35,6 @@ dependencies:
 - name: nginx-ingress
   condition: nginx-ingress.enabled
   version: '*.*.*'
-- name: postgresql
-  condition: postgresql.install
-  version: '*.*.*'
+#- name: postgresql
+#  condition: postgresql.install
+#  version: '*.*.*'
