--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -104,7 +104,7 @@ global:
       key: postgresql-postgres-password
       file:
     host: gitlab-postgresql.gitlab
-    port: 5433
+    port: 5432
     username: postgres
     database: gitlabhq_production
     applicationName:
@@ -1069,8 +1069,18 @@ gitlab:
       matchLabels:
         app: 'gitaly'
 ## https://docs.gitlab.com/charts/charts/gitlab/migrations
-#   migrations:
-#     enabled: false
+  migrations:
+    enabled: true
+    psql:
+      host: gitlab-postgresql.gitlab
+      serviceName: pgbouncer
+      port: 5432
+      database: gitlabhq_production
+      username: postgres
+      preparedStatements: false
+      password:
+        secret: gitlab-postgresql-password
+        key: postgresql-postgres-password
 ## https://docs.gitlab.com/charts/charts/gitlab/webservice
 #   webservice:
 #     enabled: false
