--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1070,7 +1070,7 @@ gitlab:
         app: 'gitaly'
 ## https://docs.gitlab.com/charts/charts/gitlab/migrations
   migrations:
-    enabled: true
+    enabled: false
     psql:
       host: gitlab-postgresql.gitlab
       serviceName: pgbouncer
