--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -98,11 +98,11 @@ global:
     keepalivesInterval:
     keepalivesCount:
     tcpUserTimeout:
-    password: "ch4ng3m3"
-#      useSecret: true
-#      secret: gitlab-postgresql-password
-#      key: postgresql-postgres-password
-#      file:
+    password:
+      useSecret: true
+      secret: gitlab-postgresql-password
+      key: postgresql-postgres-password
+      file:
     host: postgres-postgresql-ha-pgpool.postgres
     port: 5432
     username: postgres_external
