--- a/helm/charts/gitlab/charts/migrations/values.yaml
+++ b/helm/charts/gitlab/charts/migrations/values.yaml
@@ -42,11 +42,11 @@ psql: {}
   # port: 5432
 
 global:
-  psql:
-    host: postgres-postgresql-ha-pgpool.postgres
-    port: 5432
-    database: 'gitlabhq_production'
-    username: 'gitlab'
+  psql: {}
+    # host: '0.0.0.0'
+    # port: '5432'
+    # database: 'gitlabhq_production'
+    # username: 'gitlab'
     # applicationName:
     # preparedStatements: false
     # password:
