--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -923,6 +923,7 @@ redis:
 ## See requirements.yaml for current version
 postgresql:
   postgresqlUsername: postgres
+  password: ch4ng3m3
   # This just needs to be set. It will use a second entry in existingSecret for postgresql-postgres-password
   postgresqlPostgresPassword: bogus
   install: true
