--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -925,7 +925,7 @@ postgresql:
   postgresqlUsername: postgres
   password: ch4ng3m3
   # This just needs to be set. It will use a second entry in existingSecret for postgresql-postgres-password
-#  postgresqlPostgresPassword: bogus
+  postgresqlPostgresPassword: bogus
   install: true
   postgresqlDatabase: gitlabhq_production
   image:
