--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -914,7 +914,7 @@ prometheus:
 redis:
   install: true
 #  existingSecret: gitlab-redis-secret
-  password: ch4ng3m3
+  redisPassword: ch4ng3m3
   existingSecretKey: redis-password
   usePasswordFile: true
   cluster:
