--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -918,7 +918,7 @@ redis:
   existingSecretKey: redis-password
   usePasswordFile: true
   cluster:
-    enabled: false
+    enabled: true
   metrics:
     enabled: true
 
