--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -48,7 +48,7 @@ global:
     allowClusterRoles: true
   ## https://docs.gitlab.com/charts/charts/globals#configure-host-settings
   hosts:
-    domain: gitlab-lab.dev
+    domain: public-digital.lab
     hostSuffix:
     https: true
     externalIP:
@@ -112,8 +112,6 @@ global:
 
   ## https://docs.gitlab.com/charts/charts/globals#configure-redis-settings
   redis:
-#    cluster:
-#      enabled: true
     redisPassword: ch4ng3m3
     password:
       enabled: true
