--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -430,6 +430,7 @@ global:
         args:
         - name: 'openid_connect'
           secret: gitlab-test-oauth2
+          key: provider
           scope: ['openid','profile','email']
           response_type: 'code'
           issuer: 'your_oidc_url'
