--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -427,21 +427,6 @@ global:
       - name: 'openid_connect'
         secret: gitlab-openid-oauth2
         key: provider
-#        label: 'Open ID' # optional label for login button, defaults to "Openid Connect"
-#        # icon: '<custom_provider_icon>'
-#        args:
-#        - name: 'openid_connect'
-#          scope: ['openid','profile','email']
-#          response_type: 'code'
-#          issuer: 'your_oidc_url'
-#          discovery: true
-#          client_auth_method: 'query'
-#          uid_field: 'preferred_username'
-#          send_scope_to_token_endpoint: false
-#          client_options:
-#            identifier: 'your_oidc_client_id'
-#            secret: 'your_oidc_client_secret'
-#            redirect_uri: 'public-digital.lab.myddns.me/users/auth/openid_connect/callback'
 
       # - secret: gitlab-google-oauth2
       #   key: provider
@@ -652,8 +637,6 @@ global:
 
   ## https://docs.gitlab.com/charts/charts/globals#configure-webservice
   webservice:
-    minReplicas: 1
-    maxReplicas: 2
     workerTimeout: 60
 
   ## https://docs.gitlab.com/charts/charts/globals#custom-certificate-authorities
@@ -1085,8 +1068,6 @@ grafana:
 ## Settings for individual sub-charts under GitLab
 ## Note: Many of these settings are configurable via globals
 gitlab:
-  minReplicas: 1
-  maxReplicas: 2
   ## https://docs.gitlab.com/charts/charts/gitlab/toolbox
   toolbox:
     replicas: 1
@@ -1097,7 +1078,10 @@ gitlab:
 #   migrations:
 #     enabled: false
 ## https://docs.gitlab.com/charts/charts/gitlab/webservice
-#   webservice:
+  webservice:
+    minReplicas: 1
+    maxReplicas: 2
+
 #     enabled: false
 ## https://docs.gitlab.com/charts/charts/gitlab/sidekiq
 #   sidekiq:
