--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -24,6 +24,7 @@
 ## The global properties are used to configure multiple charts at once.
 ## https://docs.gitlab.com/charts/charts/globals
 global:
+  revisionHistoryLimit: 0
   common:
     labels: {}
 
