--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -29,7 +29,7 @@ global:
 
   image: {}
     # pullPolicy: IfNotPresent
-    # pullSecrets: []
+  # pullSecrets: []
 
   ## Supplemental Pod labels. Will not be used for selectors.
   pod:
@@ -48,9 +48,9 @@ global:
     allowClusterRoles: true
   ## https://docs.gitlab.com/charts/charts/globals#configure-host-settings
   hosts:
-    domain: public-digital.lab.myddns.me
+    domain: example.com
     hostSuffix:
-    https: false
+    https: true
     externalIP:
     ssh: ~
     gitlab: {}
@@ -64,13 +64,13 @@ global:
   ## https://docs.gitlab.com/charts/charts/globals#configure-ingress-settings
   ingress:
     apiVersion: ""
-    configureCertmanager: false
+    configureCertmanager: true
     provider: nginx
-    class: nginx
+    # class:
     annotations: {}
     enabled: true
-    tls:
-      enabled: false
+    tls: {}
+    #   enabled: true
     #   secretName:
     path: /
     pathType: Prefix
@@ -81,14 +81,14 @@ global:
     ## If allowing shared-secrets generation, this is OPTIONAL.
     license: {}
       # secret: RELEASE-gitlab-license
-      # key: license
+    # key: license
 
   ## Initial root password for this GitLab installation
   ## Secret created according to https://docs.gitlab.com/charts/installation/secrets#initial-root-password
   ## If allowing shared-secrets generation, this is OPTIONAL.
   initialRootPassword: {}
     # secret: RELEASE-gitlab-initial-root-password
-    # key: password
+  # key: password
 
   ## https://docs.gitlab.com/charts/charts/globals#configure-postgresql-settings
   psql:
@@ -98,27 +98,26 @@ global:
     keepalivesInterval:
     keepalivesCount:
     tcpUserTimeout:
-    password:
-      useSecret: true
-      secret: gitlab-postgresql
-      key: postgresql-postgres-password
-      file:
-    host: gitlab-postgresql.gitlab
-    port: 5432
-    username: postgres
-    database: gitlabhq_production
-    applicationName:
-    preparedStatements: false
+    password: {}
+      # useSecret:
+      # secret:
+      # key:
+    # file:
+    # host: postgresql.hostedsomewhere.else
+    # port: 123
+    # username: gitlab
+    # database: gitlabhq_production
+    # applicationName:
+    # preparedStatements: false
 
   ## https://docs.gitlab.com/charts/charts/globals#configure-redis-settings
   redis:
-    redisPassword: ch4ng3m3
     password:
       enabled: true
-      secret: gitlab-redis
-      key: redis-password
-    host: gitlab-redis-master.gitlab
-    port: 6379
+      # secret:
+      # key:
+    # host: redis.hostedsomewhere.else
+    # port: 6379
     # sentinels:
     #   - host:
     #     port:
@@ -128,10 +127,10 @@ global:
     enabled: true
     authToken: {}
       # secret:
-      # key:
+    # key:
     # serviceName:
     internal:
-      names: ['default']
+      names: [default]
     external: []
     service:
       name: gitaly
@@ -156,7 +155,7 @@ global:
         gitalyReplicas: 3
         maxUnavailable: 1
     psql:
-      sslMode: 'disable'
+      sslMode: disable
     # serviceName:
     service:
       name: praefect
@@ -174,7 +173,7 @@ global:
   minio:
     enabled: true
     credentials: {}
-      # secret:
+    # secret:
 
   ## https://docs.gitlab.com/charts/charts/globals#configure-grafana-integration
   grafana:
@@ -257,7 +256,7 @@ global:
       # historical_data_worker:
       #   cron: "0 12 * * *"
       # loose_foreign_keys_cleanup_worker_cron:
-      #   cron: "*/5 * * * *"
+    #   cron: "*/5 * * * *"
 
     ## https://docs.gitlab.com/charts/charts/globals#content-security-policy
     contentSecurityPolicy:
@@ -278,6 +277,7 @@ global:
       matomoDisableCookies:
       oneTrustId:
       googleTagManagerNonceId:
+      bizible:
 
     ## https://docs.gitlab.com/charts/charts/globals#lfs-artifacts-uploads-packages-external-mr-diffs-and-dependency-proxy
     object_store:
@@ -285,31 +285,31 @@ global:
       proxy_download: true
       storage_options: {}
         # server_side_encryption:
-        # server_side_encryption_kms_key_id
+      # server_side_encryption_kms_key_id
       connection: {}
         # secret:
-        # key:
+      # key:
     lfs:
       enabled: true
       proxy_download: true
       bucket: git-lfs
       connection: {}
         # secret:
-        # key:
+      # key:
     artifacts:
       enabled: true
       proxy_download: true
       bucket: gitlab-artifacts
       connection: {}
         # secret:
-        # key:
+      # key:
     uploads:
       enabled: true
       proxy_download: true
       bucket: gitlab-uploads
       connection: {}
         # secret:
-        # key:
+      # key:
     packages:
       enabled: true
       proxy_download: true
@@ -325,6 +325,10 @@ global:
       enabled: false
       bucket: gitlab-terraform-state
       connection: {}
+    ciSecureFiles:
+      enabled: false
+      bucket: gitlab-ci-secure-files
+      connection: {}
     dependencyProxy:
       enabled: false
       proxy_download: true
@@ -337,7 +341,7 @@ global:
       bucket: gitlab-pseudo
       connection: {}
         # secret:
-        # key:
+      # key:
     backups:
       bucket: gitlab-backups
       tmpBucket: tmp
@@ -367,7 +371,7 @@ global:
       deliveryMethod: sidekiq
       authToken: {}
         # secret:
-        # key:
+      # key:
 
     ## https://docs.gitlab.com/charts/charts/gitlab/mailroom/index.html#service-desk-email
     serviceDeskEmail:
@@ -393,7 +397,7 @@ global:
       deliveryMethod: sidekiq
       authToken: {}
         # secret:
-        # key:
+      # key:
 
     ## https://docs.gitlab.com/charts/charts/globals#ldap
     ldap:
@@ -408,26 +412,22 @@ global:
       # key:
       # enabled:
       # externalUrl:
-      # internalUrl:
+    # internalUrl:
 
     ## https://docs.gitlab.com/charts/charts/globals#omniauth
     omniauth:
-      enabled: true
+      enabled: false
       autoSignInWithProvider:
       syncProfileFromProvider: []
-      syncProfileAttributes: ['email']
-      allowSingleSignOn: true
-      blockAutoCreatedUsers: false
-      autoLinkLdapUser: true
-      autoLinkSamlUser: true
+      syncProfileAttributes: [email]
+      allowSingleSignOn: [saml]
+      blockAutoCreatedUsers: true
+      autoLinkLdapUser: false
+      autoLinkSamlUser: false
       autoLinkUser: []
       externalProviders: []
       allowBypassTwoFactor: []
-      providers: #[]
-      - name: 'openid_connect'
-        secret: gitlab-openid-oauth2
-        key: provider
-
+      providers: []
       # - secret: gitlab-google-oauth2
       #   key: provider
     ## https://docs.gitlab.com/charts/charts/globals#configure-appconfig-settings
@@ -449,7 +449,7 @@ global:
 
     # Config that only applies to the defaults on initial install
     initialDefaults: {}
-      # signupEnabled:
+    # signupEnabled:
   ## End of global.appConfig
 
   oauth:
@@ -457,7 +457,7 @@ global:
       # secret:
       # appIdKey:
       # appSecretKey:
-      # redirectUri:
+    # redirectUri:
 
   ## https://docs.gitlab.com/charts/advanced/geo/
   geo:
@@ -470,17 +470,17 @@ global:
     # PostgreSQL connection details only needed for `secondary`
     psql:
       password: {}
-        # secret:
-        # key:
+      #   secret:
+      #   key:
       # host: postgresql.hostedsomewhere.else
       # port: 123
       # username: gitlab_replicator
       # database: gitlabhq_geo_production
       # ssl:
-        # secret:
-        # clientKey:
-        # clientCertificate:
-        # serverCA:
+      #   secret:
+      #   clientKey:
+      #   clientCertificate:
+      #   serverCA:
     registry:
       replication:
         enabled: false
@@ -493,13 +493,17 @@ global:
     service:
       apiExternalPort: 8153 # port for connections from the GitLab backend
 
+  ## https://docs.gitlab.com/charts/charts/gitlab/spamcheck/
+  spamcheck:
+    enabled: false
+
   ## https://docs.gitlab.com/charts/charts/globals#configure-gitlab-shell
   shell:
     authToken: {}
-      # secret:
-      # key:
+    # secret:
+    # key:
     hostKeys: {}
-      # secret:
+    # secret:
     ## https://docs.gitlab.com/charts/charts/globals#tcp-proxy-protocol
     tcp:
       proxyProtocol: false
@@ -508,7 +512,7 @@ global:
   ## Secret created according to https://docs.gitlab.com/charts/installation/secrets#gitlab-rails-secret
   ## If allowing shared-secrets generation, this is OPTIONAL.
   railsSecrets: {}
-    # secret:
+  # secret:
 
   ## Rails generic setting, applicable to all Rails-based containers
   rails:
@@ -519,13 +523,13 @@ global:
   registry:
     bucket: registry
     certificate: {}
-      # secret:
+    # secret:
     httpSecret: {}
       # secret:
-      # key:
+    # key:
     notificationSecret: {}
       # secret:
-      # key:
+    # key:
     # https://docs.docker.com/registry/notifications/#configuration
     notifications: {}
       # endpoints:
@@ -541,7 +545,7 @@ global:
       #       SpecificPassword:
       #         secret: gitlab-registry-specific-password
       #         key: password
-      # events: {}
+    # events: {}
 
   pages:
     enabled: false
@@ -562,20 +566,20 @@ global:
       # proxy_download: true
       connection: {}
         # secret:
-        # key:
+      # key:
     apiSecret: {}
       # secret:
-      # key:
+    # key:
     authSecret: {}
       # secret:
-      # key:
+    # key:
 
   ## GitLab Runner
   ## Secret created according to https://docs.gitlab.com/charts/installation/secrets#gitlab-runner-secret
   ## If allowing shared-secrets generation, this is OPTIONAL.
   runner:
     registrationToken: {}
-      # secret:
+    # secret:
 
   ## https://docs.gitlab.com/charts/installation/deployment#outgoing-email
   ## Outgoing email server settings
@@ -597,10 +601,10 @@ global:
   ## https://docs.gitlab.com/charts/installation/deployment#outgoing-email
   ## Email persona used in email sent by GitLab
   email:
-    from: ''
+    from: ""
     display_name: GitLab
-    reply_to: ''
-    subject_suffix: ''
+    reply_to: ""
+    subject_suffix: ""
     smime:
       enabled: false
       secretName: ""
@@ -644,7 +648,7 @@ global:
   certificates:
     image:
       repository: registry.gitlab.com/gitlab-org/build/cng/alpine-certificates
-      tag: 20191127-r2
+      tag: 20191127-r2@sha256:4678ac2a66f126b20362faddd333be907d4eded47a7fb8ea2653c1522ddbed49
       # pullPolicy: IfNotPresent
       # pullSecrets: []
     customCAs: []
@@ -655,7 +659,7 @@ global:
   kubectl:
     image:
       repository: registry.gitlab.com/gitlab-org/build/cng/kubectl
-      tag: 1.16.15
+      tag: 1.18.20@sha256:824750f20381facb70cb90d3cd41da075d7ffde5a14de6f14f7037285fe0ddb7
       # pullPolicy: IfNotPresent
       # pullSecrets: []
     securityContext:
@@ -685,18 +689,18 @@ global:
 
   ## https://docs.gitlab.com/charts/charts/globals
   extraEnv: {}
-   # SOME_KEY: some_value
-   # SOME_OTHER_KEY: some_other_value
+  #   SOME_KEY: some_value
+  #   SOME_OTHER_KEY: some_other_value
 
 ## End of global
 
 upgradeCheck:
-  enabled: false
+  enabled: true
   image: {}
     # repository:
     # tag:
     # pullPolicy: IfNotPresent
-    # pullSecrets: []
+  # pullSecrets: []
   securityContext:
     # in alpine/debian/busybox based images, this is `nobody:nogroup`
     runAsUser: 65534
@@ -707,10 +711,10 @@ upgradeCheck:
       cpu: 50m
 
 ## Settings to for the Let's Encrypt ACME Issuer
-certmanager-issuer:
-  # The email address to register certificates requested from Let's Encrypt.
-  # Required if using Let's Encrypt.
-  email: email@public-digital.lab.myddns.me
+# certmanager-issuer:
+#   # The email address to register certificates requested from Let's Encrypt.
+#   # Required if using Let's Encrypt.
+#   email: email@example.com
 
 ## Installation & configuration of jetstack/cert-manager
 ## See requirements.yaml for current version
@@ -719,7 +723,7 @@ certmanager:
   nameOverride: certmanager
   # Install cert-manager chart. Set to false if you already have cert-manager
   # installed or if you are not using cert-manager.
-  install: false
+  install: true
   # Other cert-manager configurations from upstream
   # See https://github.com/jetstack/cert-manager/blob/master/deploy/charts/cert-manager/README#configuration
   rbac:
@@ -729,7 +733,7 @@ certmanager:
 ## https://docs.gitlab.com/charts/architecture/decisions#nginx-ingress
 ## Installation & configuration of charts/ingress-nginx:
 nginx-ingress:
-  enabled: false
+  enabled: true
   tcpExternalConfig: "true"
   controller:
     addHeaders:
@@ -812,8 +816,8 @@ prometheus:
         - job_name: prometheus
           static_configs:
             - targets:
-              - localhost:9090
-        - job_name: 'kubernetes-apiservers'
+                - localhost:9090
+        - job_name: kubernetes-apiservers
           kubernetes_sd_configs:
             - role: endpoints
           scheme: https
@@ -822,21 +826,32 @@ prometheus:
             insecure_skip_verify: true
           bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
           relabel_configs:
-            - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
+            - source_labels:
+                [
+                    __meta_kubernetes_namespace,
+                    __meta_kubernetes_service_name,
+                    __meta_kubernetes_endpoint_port_name,
+                ]
               action: keep
               regex: default;kubernetes;https
-        - job_name: 'kubernetes-pods'
+        - job_name: kubernetes-pods
           kubernetes_sd_configs:
             - role: pod
           relabel_configs:
-            - source_labels: [__meta_kubernetes_pod_annotation_gitlab_com_prometheus_scrape]
+            - source_labels:
+                [__meta_kubernetes_pod_annotation_gitlab_com_prometheus_scrape]
               action: keep
               regex: true
-            - source_labels: [__meta_kubernetes_pod_annotation_gitlab_com_prometheus_path]
+            - source_labels:
+                [__meta_kubernetes_pod_annotation_gitlab_com_prometheus_path]
               action: replace
               target_label: __metrics_path__
               regex: (.+)
-            - source_labels: [__address__, __meta_kubernetes_pod_annotation_gitlab_com_prometheus_port]
+            - source_labels:
+                [
+                    __address__,
+                    __meta_kubernetes_pod_annotation_gitlab_com_prometheus_port,
+                ]
               action: replace
               regex: ([^:]+)(?::\d+)?;(\d+)
               replacement: $1:$2
@@ -849,7 +864,7 @@ prometheus:
             - source_labels: [__meta_kubernetes_pod_name]
               action: replace
               target_label: kubernetes_pod_name
-        - job_name: 'kubernetes-service-endpoints'
+        - job_name: kubernetes-service-endpoints
           kubernetes_sd_configs:
             - role: endpoints
           relabel_configs:
@@ -888,14 +903,17 @@ prometheus:
               source_labels:
                 - __meta_kubernetes_pod_node_name
               target_label: kubernetes_node
-        - job_name: 'kubernetes-services'
+        - job_name: kubernetes-services
           metrics_path: /probe
           params:
             module: [http_2xx]
           kubernetes_sd_configs:
             - role: service
           relabel_configs:
-            - source_labels: [__meta_kubernetes_service_annotation_gitlab_com_prometheus_probe]
+            - source_labels:
+                [
+                    __meta_kubernetes_service_annotation_gitlab_com_prometheus_probe,
+                ]
               action: keep
               regex: true
             - source_labels: [__address__]
@@ -916,11 +934,11 @@ prometheus:
 ## https://docs.gitlab.com/charts/installation/deployment.html#redis
 redis:
   install: true
-#  existingSecret: gitlab-redis-secret
+  existingSecret: gitlab-redis-secret
   existingSecretKey: redis-password
   usePasswordFile: true
   cluster:
-    enabled: true
+    enabled: false
   metrics:
     enabled: true
 
@@ -929,15 +947,14 @@ redis:
 postgresql:
   postgresqlUsername: gitlab
   # This just needs to be set. It will use a second entry in existingSecret for postgresql-postgres-password
-  postgresqlPostgresPassword: ch4ng3m3
-  postgresqlPassword: ch4ng3m3
+  postgresqlPostgresPassword: bogus
   install: true
   postgresqlDatabase: gitlabhq_production
   image:
     tag: 12.7.0
   usePasswordFile: true
-  # existingSecret: 'bogus'
-  initdbScriptsConfigMap: 'bogus'
+  existingSecret: bogus
+  initdbScriptsConfigMap: bogus
   master:
     extraVolumeMounts:
       - name: custom-init-scripts
@@ -953,9 +970,8 @@ postgresql:
 ## Installation & configuration charts/registry
 ## https://docs.gitlab.com/charts/architecture/decisions#registry
 ## https://docs.gitlab.com/charts/charts/registry/
-registry:
-  enabled: false
-
+# registry:
+#   enabled: false
 
 ## Automatic shared secret generation
 ## https://docs.gitlab.com/charts/installation/secrets
@@ -969,7 +985,7 @@ shared-secrets:
       # pullPolicy: IfNotPresent
       # pullSecrets: []
       repository: registry.gitlab.com/gitlab-org/build/cng/cfssl-self-sign
-      tag: 1.2
+      tag: 1.6.1@sha256:34714b9e5809c1a35c0530da70fa69d7caf04150e7168212611905d97902168e
     keyAlgorithm: "rsa"
     keySize: "4096"
     expiry: "3650d"
@@ -993,7 +1009,7 @@ shared-secrets:
 ## Installation & configuration of gitlab/gitlab-runner
 ## See requirements.yaml for current version
 gitlab-runner:
-  install: false
+  install: true
   rbac:
     create: true
   runners:
@@ -1031,7 +1047,7 @@ grafana:
     GF_SECURITY_ADMIN_PASSWORD: bogus
   ## This override allows gitlab/gitlab-grafana to completely override the secret
   ##   handling behavior of the upstream chart in combination with the above.
-  command: [ "sh", "-x", "/tmp/scripts/import-secret.sh" ]
+  command: ["sh", "-x", "/tmp/scripts/import-secret.sh"]
   ## The following settings allow Grafana to dynamically create
   ## dashboards and datasources from configmaps. See
   ## https://artifacthub.io/packages/helm/grafana/grafana#sidecar-for-dashboards
@@ -1073,29 +1089,26 @@ gitlab:
     replicas: 1
     antiAffinityLabels:
       matchLabels:
-        app: 'gitaly'
-## https://docs.gitlab.com/charts/charts/gitlab/migrations
-#   migrations:
-#     enabled: false
-## https://docs.gitlab.com/charts/charts/gitlab/webservice
-  webservice:
-    revisionHistoryLimit: 0
-    minReplicas: 1
-    maxReplicas: 2
-#     enabled: false
-## https://docs.gitlab.com/charts/charts/gitlab/sidekiq
-  sidekiq:
-    revisionHistoryLimit: 0
-    minReplicas: 1
-    maxReplicas: 2
-#     enabled: false
-## https://docs.gitlab.com/charts/charts/gitlab/gitaly
-#   gitaly:
-## https://docs.gitlab.com/charts/charts/gitlab/gitlab-shell
-  gitlab-shell:
-    revisionHistoryLimit: 0
-    minReplicas: 1
-    maxReplicas: 2
-#     enabled: false
-## https://docs.gitlab.com/charts/charts/gitlab/gitlab-grafana
-#   gitlab-grafana:
+        app: gitaly
+  ## https://docs.gitlab.com/charts/charts/gitlab/migrations
+  #   migrations:
+  #     enabled: false
+  ## https://docs.gitlab.com/charts/charts/gitlab/webservice
+  #   webservice:
+  #     enabled: false
+  ## https://docs.gitlab.com/charts/charts/gitlab/sidekiq
+  #   sidekiq:
+  #     enabled: false
+  ## https://docs.gitlab.com/charts/charts/gitlab/gitaly
+  #   gitaly:
+  ## https://docs.gitlab.com/charts/charts/gitlab/gitlab-shell
+  #   gitlab-shell:
+  #     enabled: false
+  ## https://docs.gitlab.com/charts/charts/gitlab/gitlab-grafana
+  #   gitlab-grafana:
+  ## https://docs.gitlab.com/charts/charts/gitlab/gitlab-pages
+  #   gitlab-pages:
+  ## https://docs.gitlab.com/charts/charts/gitlab/kas
+  #   kas:
+  ## https://docs.gitlab.com/charts/charts/gitlab/praefect
+  #   praefect:
