--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -11,7 +11,7 @@ global:
   psql:
     password:
       useSecret: true
-      secret: gitlab-postgresql
+      secret: gitlab-postgresql-secret
       key: postgresql-postgres-password
       file:
     host: gitlab-postgresql.gitlab
@@ -24,12 +24,11 @@ global:
   redis:
     password:
       enabled: true
-      secret: gitlab-redis
+      secret: gitlab-redis-secret
       key: redis-password
     host: gitlab-redis-master.gitlab
     port: 6379
 
-  ## https://docs.gitlab.com/charts/charts/globals#configure-minio-settings
   minio:
     enabled: true
     credentials: {}
@@ -48,7 +47,7 @@ global:
       autoLinkUser: []
       externalProviders: []
       allowBypassTwoFactor: []
-      providers: #[]
+      providers:
       - name: 'openid_connect'
         secret: gitlab-openid-oauth2
         key: provider
@@ -57,20 +56,12 @@ global:
 upgradeCheck:
   enabled: false
 
-## Installation & configuration of jetstack/cert-manager
-## See requirements.yaml for current version
 certmanager:
   install: false
 
-## https://docs.gitlab.com/charts/charts/nginx/
-## https://docs.gitlab.com/charts/architecture/decisions#nginx-ingress
-## Installation & configuration of charts/ingress-nginx:
 nginx-ingress:
   enabled: false
 
-## Configuration of Redis
-## https://docs.gitlab.com/charts/architecture/decisions#redis
-## https://docs.gitlab.com/charts/installation/deployment.html#redis
 redis:
   install: true
   existingSecret: gitlab-redis
@@ -85,7 +76,6 @@ redis:
 ## See requirements.yaml for current version
 postgresql:
   postgresqlUsername: gitlab
-  # This just needs to be set. It will use a second entry in existingSecret for postgresql-postgres-password
   postgresqlPostgresPassword: ch4ng3m3
   postgresqlPassword: ch4ng3m3
   install: true
@@ -104,23 +94,14 @@ postgresql:
       postgresql.gitlab/init-revision: "1"
   metrics:
     enabled: true
-    ## Optionally define additional custom metrics
-    ## ref: https://github.com/wrouesnel/postgres_exporter#adding-new-metrics-via-a-config-file
 
 registry:
   enabled: false
 
-
-## Installation & configuration of gitlab/gitlab-runner
-## See requirements.yaml for current version
 gitlab-runner:
   install: false
 
-
-## Settings for individual sub-charts under GitLab
-## Note: Many of these settings are configurable via globals
 gitlab:
-  ## https://docs.gitlab.com/charts/charts/gitlab/toolbox
   toolbox:
     replicas: 1
     antiAffinityLabels:
@@ -128,16 +109,13 @@ gitlab:
         app: 'gitaly'
 
   webservice:
-    revisionHistoryLimit: 0
     minReplicas: 1
     maxReplicas: 2
 
   sidekiq:
-    revisionHistoryLimit: 0
     minReplicas: 1
     maxReplicas: 2
 
   gitlab-shell:
-    revisionHistoryLimit: 0
     minReplicas: 1
     maxReplicas: 2
