--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -108,6 +108,15 @@ gitlab:
       matchLabels:
         app: 'gitaly'
 
+  gitaly:
+    resources:
+      requests:
+        cpu: 150m
+        memory: 250Mi
+      limits:
+        cpu: 500m
+        memory: 500Mi
+
   webservice:
     minReplicas: 2
     maxReplicas: 2
